[package]
name = "mcpe"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy.git"
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_core_pipeline",
    "bevy_state",
    "bevy_render",
    "bevy_pbr",
    "bevy_ui",
    "bevy_text",
    "tonemapping_luts",
    "bevy_sprite",
    "bevy_winit",
    "bevy_window",
    "bevy_picking",
    "bevy_mesh_picking_backend",
    "bevy_ui_picking_backend",
    "bevy_ui_render",
    "x11",
    # "wayland",
    "png",
    "zstd_rust",
]

[features]
default = ["bevy/bevy_dev_tools"]
